correction of close dialog

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <title>Trends KnockOut</title>
 
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-dialog.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
 
+<div id="hackbit-vote-widget"></div>
 
-<div class="col-md-8 text-center" style="height: 30%">
+<div class="container">
+
+    <div class="col-md-8 text-center" style="height: 30%">
+
+        <div id="beginSection">
+            <h1 id="welcome"></h1>
+            <button class="btn btn-warning btn-lg" value="">Fight!</button>
+        </div>
+
+        <div id="gameSection">
+            GAMEEE
+        </div>
+
+    </div>
+
+    <div class="col-md-4 text-center">
+
+        <h2>Leaderboard</h2>
 
 
-<div id="beginSection">
-    <h1 id="welcome"></h1>
-    <button class="btn btn-warning btn-lg" value="">Fight!</button>
+    </div>
 </div>
-
-<div id="gameSection">
-    GAMEEE
-</div>
-
-</div>
-
-<div class="col-md-4 text-center">
-
-<h2>Leaderboard</h2>
-
-</div>
-
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-dialog.min.js"></script>
 <script src="js/main.js"></script>
+
+<script src="https://www.nodeknockout.com/entries/309-ogu/vote.js" type="text/javascript"></script>
 
 </body>
 </html>
