--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="gameSection">
-            GAMEEE
+            GAME
         </div>
 
     </div>
@@ -40,7 +40,6 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-dialog.min.js"></script>
 <script src="js/main.js"></script>
-
 <script src="https://www.nodeknockout.com/entries/309-ogu/vote.js" type="text/javascript"></script>
 
 </body>
