--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,10 +53,17 @@
 
     </div>
 
-    <div class="col-md-4 text-center">
+    <div class="col-md-4 text-center little-down" >
 
         <h2>Leaderboard</h2>
 
+        <table class="table table-striped" >
+            <thead>
+            <td>Nickname</td>
+            <td>Points</td>
+            </tr></thead>
+            <tbody id="leaders"></tbody>
+        </table>
 
     </div>
 </div>
