--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,12 +52,13 @@
 
     </div>
 
-    <div class="col-md-4 text-center little-down" >
+    <div class="col-md-4 text-center little-down">
 
         <h2>Leaderboard</h2>
 
-        <table class="table table-striped" >
+        <table class="table table-striped">
             <thead>
+            <td>#</td>
             <td>Nickname</td>
             <td>Points</td>
             </tr></thead>
@@ -67,6 +68,7 @@
     </div>
 </div>
 
+<script src="js/socket.io.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-dialog.min.js"></script>
