--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,16 +32,16 @@
                 <h2>Which one is most popular in 2017 Worlwide?</h2>
             </div>
             <div class="row">
-                <div id="myPlayer" class="col-md-4 little-down">
-                    <img src="img/p1left.gif" alt="myplayer">
+                <div class="col-md-4 little-down">
+                    <img id="myPlayer" src="img/p1left.gif" alt="myplayer">
                 </div>
 
                 <div id="choices" class="col-md-4">
 
                 </div>
 
-                <div id="opponent" class="col-md-4 little-down">
-                    <img src="img/p2right.gif" alt="opponent">
+                <div class="col-md-4 little-down">
+                    <img id="opponent" src="img/p2right.gif" alt="opponent">
                 </div>
             </div>
 
