--- a/backend/index.html
+++ b/backend/index.html
@@ -68,7 +68,7 @@
     </div>
 </div>
 
-<script src="js/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-dialog.min.js"></script>
